--- a/web/client/themes/default/less/layerdownload.less
+++ b/web/client/themes/default/less/layerdownload.less
@@ -72,7 +72,9 @@
             flex-direction: column;
             justify-content: center;
         }
-
+        .mapstore-exportdataresults-item-name-format{
+            font-size: 11px;
+        }
         .mapstore-exportdataresults-item-date {
             flex-basis: 40%;
             display: flex;
