--- a/web/client/themes/default/less/map-search-bar.less
+++ b/web/client/themes/default/less/map-search-bar.less
@@ -292,6 +292,13 @@ div.MapSearchBar .form-control:focus {
         }
     }
 
+    .routeSearch{
+        width: 75%;
+        display: flex;
+        flex: 1;
+        padding: 0 6px;
+    }
+
     // search toolbar
     .search-toolbar-options {
         .magnifying-glass {
